# pynews

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  package-lock.json  package.json  pyproject.toml  summary_prompt.j2  svelte.config.js  tailwind.config.js  wrangler.jsonc
.github/workflows/: daily-summary.yml
migrations/: 001_initial_schema.sql
src/python/: config.py  httpclient.py  summarizer.py
src/python/newsfetcher/: abccolor.py  lanacion.py  newsfetcher.py
src/svelte/: app.d.ts  svelte.config.js  worker-configuration.d.ts
src/svelte/lib/: email.d.ts  email.ts  i18n.ts  validation.d.ts
src/svelte/lib/db/: migrate.ts  wrangler-migration.ts
src/svelte/lib/db/migrations/: 001_initial_schema.sql
src/svelte/lib/locales/: en-US.json  es-PY.json  zh-TW.json
src/svelte/routes/: +layout.svelte  +page.svelte
src/svelte/routes/api/confirm/: +server.ts
src/svelte/routes/api/deploy/: +server.ts
src/svelte/routes/api/protected/deploy/: +server.ts
src/svelte/routes/api/protected/subscribers/: +server.ts
src/svelte/routes/api/public/confirm/: +server.ts
src/svelte/routes/api/public/subscribe/: +server.ts
src/svelte/routes/api/public/unsubscribe/: +server.ts
src/svelte/routes/api/subscribe/: +server.ts
src/svelte/routes/api/subscribers/: +server.ts
src/svelte/routes/api/unsubscribe/: +server.ts
src/svelte/routes/confirm/: +page.svelte  +page.ts
