[project]
name = "pynews"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "jinja2>=3.1.6",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
